--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
+    "react-switch": "^7.0.0",
+    "web3uikit": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
