--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "18.2.0",
     "react-moralis": "^1.4.2",
     "react-switch": "^7.0.0",
+    "sharp": "^0.31.3",
     "web3uikit": "^1.0.4"
   },
   "devDependencies": {
